tests/fun-dec-wrong-num-pats/out.txt
error: mismatched number of patterns: expected 1, found 2
  ┌─ err.sml:2:7
  │
2 │   | f 3 4 = 5
  │       ^^^

typechecking failed
